--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>cn.CityCraft</groupId>
 	<artifactId>Yum</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.1</version>
 	<name>Yum</name>
   <build>
     <finalName>${project.name}</finalName>
