--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,9 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>cn.citycraft</groupId>
 	<artifactId>Yum</artifactId>
-	<version>1.3</version>
+	<version>1.3-bate1</version>
 	<name>Yum</name>
+	<description>Minecraft 服务器插件管理系统</description>
 	<build>
 		<finalName>${project.name}</finalName>
 		<resources>
