--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
 				<artifactId>maven-shade-plugin</artifactId>
 				<version>2.3</version>
 				<configuration>
+					<createDependencyReducedPom>false</createDependencyReducedPom>
 					<minimizeJar>true</minimizeJar>
 					<artifactSet>
 						<includes>
