fix author error...
Signed-off-by: 502647092 <jtb1@163.com>

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,7 +2,7 @@ name: ${project.artifactId}
 description: ${project.description}
 main: ${project.groupId}.${project.artifactId}.${project.artifactId}
 version: ${project.version}
-auther: 喵♂呜
+author: 喵♂呜
 website: http://ci.citycraft.cn:8800/jenkins/job/${project.artifactId}/
 commands:
   yum:
