fix permission error...
Signed-off-by: j502647092 <jtb1@163.com>

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -8,3 +8,12 @@ commands:
   yum:
     description: MC插件仓库
     usage: §6使用§a/yum help§6查看帮助!
+    permission: yum.use
+    permission-message: §c你没有 <permission> 的权限来执行此命令!
+permissions:
+  yum.use:
+    description: 插件管理系统使用权限!
+    default: op
+  yum.reload:
+    description: 重新载入插件!
+    default: op
