--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: ${project.artifactId}
 description: ${project.description}
 main: ${project.groupId}.${project.artifactId}.${project.artifactId}
-version: ${project.version}
+version: ${project.version}-Build#${env.BUILD_NUMBER}
 author: 喵♂呜
 website: ${jenkins.url}/job/${project.artifactId}/
 commands:
