添加File文件操作命令...
Signed-off-by: 502647092 <jtb1@163.com>

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -10,6 +10,11 @@ commands:
     usage: §6使用§a/yum help§6查看帮助!
     permission: yum.use
     permission-message: §c你没有 <permission> 的权限来执行此命令!
+  file:
+    description: MC文件管理命令
+    usage: §6使用§a/yum help§6查看帮助!
+    permission: yum.use
+    permission-message: §c你没有 <permission> 的权限来执行此命令!
 permissions:
   yum.use:
     description: 插件管理系统使用权限!
