添加防删除黑名单...
Signed-off-by: 502647092 <jtb1@163.com>

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,3 +1,9 @@
-Version: 1.0
+Version: 1.2
 #是否只允许控制台执行插件命令
 onlyCommandConsole: false
+#是否只允许控制台执行插件文件命令
+onlyFileCommandConsole: true
+#禁止rm -rf的文件夹列表
+blacklist:
+- 'plugins'
+- 'worlds'
