--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -12,8 +12,8 @@ commands:
     permission-message: §c你没有 <permission> 的权限来执行此命令!
   file:
     description: MC文件管理命令
-    usage: §6使用§a/yum help§6查看帮助!
-    permission: yum.use
+    usage: §6使用§a/file help§6查看帮助!
+    permission: file.use
     permission-message: §c你没有 <permission> 的权限来执行此命令!
 permissions:
   yum.use:
