--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>cn.citycraft</groupId>
 	<artifactId>Yum</artifactId>
-	<version>1.9.3</version>
+	<version>1.9.5</version>
 	<name>Yum</name>
 	<description>Minecraft 服务器插件管理系统</description>
 	<build>
@@ -55,7 +55,7 @@
 	</build>
 	<properties>
 		<jenkins.url>http://ci.citycraft.cn:8080</jenkins.url>
-		<update.description>&amp;c清理无用模块 整合file功能...</update.description>
+		<update.description>&amp;e添加yum info指令查看插件权限和注册命令...</update.description>
 		<env.BUILD_NUMBER>Debug</env.BUILD_NUMBER>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
