--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -7,11 +7,13 @@ website: ${jenkins.url}/job/${project.artifactId}/
 commands:
   yum:
     description: MC插件仓库
+    aliases: [y,apt-get]
     usage: §6使用§a/yum help§6查看帮助!
     permission: yum.use
     permission-message: §c你没有 <permission> 的权限来执行此命令!
   file:
     description: MC文件管理命令
+    aliases: [f]
     usage: §6使用§a/file help§6查看帮助!
     permission: file.use
     permission-message: §c你没有 <permission> 的权限来执行此命令!
