--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>cn.citycraft</groupId>
 	<artifactId>Yum</artifactId>
-	<version>2.0</version>
+	<version>2.0.1</version>
 	<name>Yum</name>
 	<description>Minecraft 服务器插件管理系统</description>
 	<build>
@@ -56,7 +56,12 @@
 	<properties>
 		<jenkins.url>http://hs.yumc.pw:8080</jenkins.url>
 		<update.description>&amp;a全新 2.0 版本 震撼发布...</update.description>
-		<update.changes>&amp;a精简大量代码...;&amp;a服务器启动后自动检查可更新插件...;&amp;a优化检测流程...</update.changes>
+		<update.changes>
+			&amp;b2.0.1 &amp;6- &amp;c插件在upgrade时自动重命名为原有名称...
+			&amp;b2.0 &amp;6- &amp;a精简大量代码...
+			&amp;a    服务器启动后自动检查可更新插件...
+			&amp;a    优化检测流程...
+		</update.changes>
 		<env.GIT_COMMIT>DEBUG</env.GIT_COMMIT>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
