--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>cn.citycraft</groupId>
 	<artifactId>Yum</artifactId>
-	<version>2.0.1</version>
+	<version>2.0.2</version>
 	<name>Yum</name>
 	<description>Minecraft 服务器插件管理系统</description>
 	<build>
@@ -57,10 +57,9 @@
 		<jenkins.url>http://hs.yumc.pw:8080</jenkins.url>
 		<update.description>&amp;a全新 2.0 版本 震撼发布...</update.description>
 		<update.changes>
-			&amp;b2.0.1 &amp;6- &amp;c插件在upgrade时自动重命名为原有名称...
-			&amp;b2.0 &amp;6- &amp;a精简大量代码...
-			&amp;a    服务器启动后自动检查可更新插件...
-			&amp;a    优化检测流程...
+			&amp;b2.0.2 &amp;6- &amp;c修复检查可更新插件功能导致全局更新失效问题...;
+			&amp;b      &amp;6- &amp;d新增全局更新限制 无法同时进行 防止错误...;
+			&amp;b2.0.1 &amp;6- &amp;c插件在upgrade时自动重命名为原有名称...;
 		</update.changes>
 		<env.GIT_COMMIT>DEBUG</env.GIT_COMMIT>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -80,7 +79,7 @@
 			<groupId>org.spigotmc</groupId>
 			<artifactId>spigot-api</artifactId>
 			<type>jar</type>
-			<version>1.8.8-R0.1-SNAPSHOT</version>
+			<version>1.9-R0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>cn.citycraft</groupId>
