fix(NetworkManager.java): 修复网络代理检测部分...
1.配置文件添加新选项
2.调整代理注入时间
3.更新版本号

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,4 +1,4 @@
-Version: 2.0
+Version: 2.1
 #是否只允许控制台执行插件命令
 onlyCommandConsole: false
 #是否只允许控制台执行插件文件命令
@@ -13,3 +13,8 @@ ignorelist:
 - 'Vault'
 - 'iConomy'
 - 'GroupManager'
+- 'PermissionsEx'
+#网络调试模式
+NetworkDebug: false
+#是否允许插件主线程访问网络
+AllowPrimaryThread: false
