--- a/pom.xml
+++ b/pom.xml
@@ -58,8 +58,9 @@
 		<url>http://ci.yumc.pw/job/${project.artifactId}/</url>
 	</ciManagement>
 	<properties>
-		<update.description>&amp;a全新 2.0 版本 震撼发布...</update.description>
+		<update.description>&amp;a全新 2.1 版本 添加网络管理...</update.description>
 		<update.changes>
+			&amp;b2.1   &amp;6- &amp;e新增网络管理 防止主线程卡IO...;
 			&amp;b2.0.3 &amp;6- &amp;a重载所有插件时忽略部分已注册服务插件...;
 			&amp;b2.0.2 &amp;6- &amp;c修复检查可更新插件功能导致全局更新失效问题...;
 			&amp;b      &amp;6- &amp;d新增全局更新限制 无法同时进行 防止错误...;
@@ -68,10 +69,6 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<repositories>
-		<repository>
-			<id>spigot-repo</id>
-			<url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
-		</repository>
 		<repository>
 			<id>yumc-repo</id>
 			<url>http://repo.yumc.pw/content/groups/public/</url>
