--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,8 +1,14 @@
 Version: 2.1
-#是否只允许控制台执行插件命令
+#是否只允许控制台执行插件仓库命令
 onlyCommandConsole: false
-#是否只允许控制台执行插件文件命令
+#是否只允许控制台执行插件网络管理命令
+onlyNetCommandConsole: false
+#是否只允许控制台执行插件文件管理命令
 onlyFileCommandConsole: true
+#网络调试模式
+NetworkDebug: false
+#是否允许插件主线程访问网络
+AllowPrimaryThread: false
 #禁止rm -rf的文件夹列表
 blacklist:
 - 'plugins'
@@ -14,7 +20,3 @@ ignorelist:
 - 'iConomy'
 - 'GroupManager'
 - 'PermissionsEx'
-#网络调试模式
-NetworkDebug: false
-#是否允许插件主线程访问网络
-AllowPrimaryThread: false
