--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -11,6 +11,12 @@ commands:
     usage: §6使用§a/yum help§6查看帮助!
     permission: yum.use
     permission-message: §c你没有 <permission> 的权限来执行此命令!
+  net:
+    description: MC插件网络管理
+    aliases: [n]
+    usage: §6使用§a/net help§6查看帮助!
+    permission: net.use
+    permission-message: §c你没有 <permission> 的权限来执行此命令!
   file:
     description: MC文件管理命令
     aliases: [f]
