--- a/pom.xml
+++ b/pom.xml
@@ -94,5 +94,11 @@
 			<type>jar</type>
 			<version>1.0</version>
 		</dependency>
+		<dependency>
+			<groupId>pw.yumc</groupId>
+			<artifactId>BukkitInjectedTools</artifactId>
+			<type>jar</type>
+			<version>1.0</version>
+		</dependency>
 	</dependencies>
 </project>
