--- a/pom.xml
+++ b/pom.xml
@@ -58,17 +58,21 @@
 		<url>http://ci.yumc.pw/job/${project.artifactId}/</url>
 	</ciManagement>
 	<properties>
-		<update.description>&amp;a全新 2.1 版本 添加网络管理...</update.description>
+		<update.description>&amp;a全新 2.2 版本 添加线程安全管理</update.description>
 		<update.changes>
+			&amp;b2.2   &amp;6- &amp;e新增线程安全拦截 主线程IO拦截...;
 			&amp;b2.1   &amp;6- &amp;e新增网络管理 防止主线程卡IO...;
+			&amp;b      &amp;6- &amp;d新增安全管理系统(需要&amp;dbBukkitInjectedTools&amp;d)...;
 			&amp;b2.0.3 &amp;6- &amp;a重载所有插件时忽略部分已注册服务插件...;
-			&amp;b2.0.2 &amp;6- &amp;c修复检查可更新插件功能导致全局更新失效问题...;
-			&amp;b      &amp;6- &amp;d新增全局更新限制 无法同时进行 防止错误...;
 		</update.changes>
 		<env.GIT_COMMIT>DEBUG</env.GIT_COMMIT>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<repositories>
+		<repository>
+			<id>spigot-repo</id>
+			<url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
+		</repository>
 		<repository>
 			<id>yumc-repo</id>
 			<url>http://repo.yumc.pw/content/groups/public/</url>
