--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>pw.yumc</groupId>
 	<artifactId>Yum</artifactId>
-	<version>2.2</version>
+	<version>2.3</version>
 	<name>Yum</name>
 	<description>Minecraft 服务器插件管理系统</description>
 	<build>
@@ -58,12 +58,12 @@
 		<url>http://ci.yumc.pw/job/${project.artifactId}/</url>
 	</ciManagement>
 	<properties>
-		<update.description>&amp;a全新 2.2 版本 添加线程安全管理</update.description>
+		<update.description>&amp;a全新 2.X 版本 更多守护与优化</update.description>
 		<update.changes>
-			&amp;b2.2   &amp;6- &amp;e新增线程安全拦截 主线程IO拦截...;
+			&amp;b2.3   &amp;6- &amp;a网络监控添加域名白名单功能...;
+			&amp;b2.2   &amp;6- &amp;b新增线程安全拦截 主线程IO拦截...;
 			&amp;b2.1   &amp;6- &amp;e新增网络管理 防止主线程卡IO...;
 			&amp;b      &amp;6- &amp;d新增安全管理系统(需要&amp;dbBukkitInjectedTools&amp;d)...;
-			&amp;b2.0.3 &amp;6- &amp;a重载所有插件时忽略部分已注册服务插件...;
 		</update.changes>
 		<env.GIT_COMMIT>DEBUG</env.GIT_COMMIT>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
