--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>pw.yumc</groupId>
 	<artifactId>Yum</artifactId>
-	<version>2.4</version>
+	<version>2.4.1</version>
 	<name>Yum</name>
 	<description>Minecraft 服务器插件管理系统</description>
 	<build>
@@ -60,6 +60,7 @@
 	<properties>
 		<update.description>&amp;a全新 2.X 版本 更多守护与优化</update.description>
 		<update.changes>
+			&amp;b2.4.1 &amp;6- &amp;c修复reload命令报错的问题...;
 			&amp;b2.4   &amp;6- &amp;c修复重载插件导致线程安全错误的问题...;
 			&amp;b2.3   &amp;6- &amp;a网络监控添加域名白名单功能...;
 			&amp;b2.2   &amp;6- &amp;b新增线程安全拦截 主线程IO拦截...;
