feat: 添加能耗监控系统
Signed-off-by: 502647092 <admin@yumc.pw>

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -30,6 +30,12 @@ commands:
     usage: §6使用§a/security help§6查看帮助!
     permission: security.use
     permission-message: §c你没有 <permission> 的权限来执行此命令!
+  monitor: 
+    description: MC系统监控命令
+    aliases: [m]
+    usage: §6使用§a/monitor help§6查看帮助!
+    permission: monitor.use
+    permission-message: §c你没有 <permission> 的权限来执行此命令!
 permissions:
   yum.use:
     description: 插件管理系统使用权限!
