--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -3,14 +3,14 @@
 ############################
 
 #配置版本号 请勿修改!!!
-Version: 2.2
+Version: 2.3
 
 #是否只允许控制台执行插件仓库命令
 onlyCommandConsole: false
 #是否只允许控制台执行插件网络管理命令
 onlyNetCommandConsole: false
 #是否只允许控制台执行插件文件管理命令
-onlyFileCommandConsole: true
+onlyFileCommandConsole: false
 #禁止rm -rf的文件夹列表
 blacklist:
 - 'plugins'
@@ -22,3 +22,4 @@ ignorelist:
 - 'iConomy'
 - 'GroupManager'
 - 'PermissionsEx'
+- 'Essentials'
