--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>pw.yumc</groupId>
 	<artifactId>Yum</artifactId>
-	<version>2.6.7</version>
+	<version>2.6.8</version>
 	<name>Yum</name>
 	<description>Minecraft 服务器插件管理系统</description>
 	<build>
@@ -60,10 +60,10 @@
 	<properties>
 		<update.description>&amp;a全新 2.X 版本 更多守护与优化</update.description>
 		<update.changes>
-			&amp;c注意  &amp;6- &amp;cYum更新需要重启服务器!重启服务器!重启服务器!;
+			&amp;c注意  &amp;6- &amp;aYum更新需要&amp;d重启服务器!&amp;c重启服务器!&amp;4重启服务器!;
+			&amp;b2.6.8 &amp;6- &amp;c修复PerWorldPlugins的监控错误...;
 			&amp;b2.6.7 &amp;6- &amp;d兼容PerWorldPlugins...;
 			&amp;b2.6.6 &amp;6- &amp;c修复快捷点击按钮触发命令错误...;
-			&amp;b2.6.5 &amp;6- &amp;c修复list命令 &amp;a添加全局能耗统计...;
 		</update.changes>
 		<env.GIT_COMMIT>DEBUG</env.GIT_COMMIT>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
