--- a/src/main/resources/monitor.yml
+++ b/src/main/resources/monitor.yml
@@ -3,12 +3,14 @@
 ############################
 
 #配置版本号 请勿修改!!!
-Version: 1.2
+Version: 1.3
 
 #是否开启
 Enable: true
 #是否显示开发人员信息
 Debug: false
+#是否保存Lag日志到文件
+LogToFile: true
 #忽略检测列表
 Ignore:
 - PluginHelper
