feat: 使用新的处理库
Signed-off-by: 502647092 <admin@yumc.pw>

--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,10 @@
 							<pattern>cn.citycraft.PluginHelper</pattern>
 							<shadedPattern>${project.groupId}.${project.artifactId}</shadedPattern>
 						</relocation>
+						<relocation>
+							<pattern>pw.yumc.PluginHelper</pattern>
+							<shadedPattern>${project.groupId}.${project.artifactId}</shadedPattern>
+						</relocation>
 					</relocations>
 				</configuration>
 				<executions>
