--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>pw.yumc</groupId>
 	<artifactId>Yum</artifactId>
-	<version>2.6.8</version>
+	<version>2.7.0</version>
 	<name>Yum</name>
 	<description>Minecraft 服务器插件管理系统</description>
 	<build>
@@ -33,6 +33,7 @@
 					<artifactSet>
 						<includes>
 							<include>cn.citycraft:PluginHelper</include>
+							<include>pw.yumc:YumCore</include>
 						</includes>
 					</artifactSet>
 					<relocations>
@@ -41,7 +42,7 @@
 							<shadedPattern>${project.groupId}.${project.artifactId}</shadedPattern>
 						</relocation>
 						<relocation>
-							<pattern>pw.yumc.PluginHelper</pattern>
+							<pattern>pw.yumc.YumCore</pattern>
 							<shadedPattern>${project.groupId}.${project.artifactId}</shadedPattern>
 						</relocation>
 					</relocations>
@@ -65,9 +66,8 @@
 		<update.description>&amp;a全新 2.X 版本 更多守护与优化</update.description>
 		<update.changes>
 			&amp;c注意  &amp;6- &amp;aYum更新需要&amp;d重启服务器!&amp;c重启服务器!&amp;4重启服务器!;
-			&amp;b2.6.8 &amp;6- &amp;c修复PerWorldPlugins的监控错误...;
-			&amp;b2.6.7 &amp;6- &amp;d兼容PerWorldPlugins...;
-			&amp;b2.6.6 &amp;6- &amp;c修复快捷点击按钮触发命令错误...;
+			&amp;b2.7.0 &amp;6- &amp;a完善能耗监控流程...;
+			&amp;b      &amp;6- &amp;a报错能耗添加日志记录;
 		</update.changes>
 		<env.GIT_COMMIT>DEBUG</env.GIT_COMMIT>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -99,6 +99,12 @@
 		<dependency>
 			<groupId>cn.citycraft</groupId>
 			<artifactId>PluginHelper</artifactId>
+			<type>jar</type>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>pw.yumc</groupId>
+			<artifactId>YumCore</artifactId>
 			<type>jar</type>
 			<version>1.0</version>
 		</dependency>
