--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>pw.yumc</groupId>
 	<artifactId>Yum</artifactId>
-	<version>2.7.7</version>
+	<version>2.7.8</version>
 	<name>Yum</name>
 	<description>Minecraft 服务器插件管理系统</description>
 	<build>
@@ -65,14 +65,10 @@
 			        §6- §c修复§eBukkitDev§c下载地址跳转问题...;
 			        §6- §c修复§eBukkitDev§c下载为空时的异常...;
 		</update.changes>
-		<env.GIT_COMMIT>DEBUG</env.GIT_COMMIT>
+		<env.GIT_COMMIT>DEV</env.GIT_COMMIT>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<repositories>
-		<repository>
-			<id>spigot-repo</id>
-			<url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
-		</repository>
 		<repository>
 			<id>yumc-repo</id>
 			<url>http://repo.yumc.pw/content/groups/public/</url>
@@ -87,16 +83,10 @@
 	</distributionManagement>
 	<dependencies>
 		<dependency>
-			<groupId>org.spigotmc</groupId>
-			<artifactId>spigot-api</artifactId>
-			<type>jar</type>
-			<version>1.10.2-R0.1-SNAPSHOT</version>
-		</dependency>
-		<dependency>
 			<groupId>pw.yumc</groupId>
 			<artifactId>YumCore</artifactId>
 			<type>jar</type>
-			<version>1.1</version>
+			<version>1.5</version>
 		</dependency>
 		<dependency>
 			<groupId>pw.yumc</groupId>
